# wl_gena

./: CMakeLists.txt  DG.hh  Format.hh  Gena.cc  GenaMain.cc  HeaderGena.cc  HeaderGena.hh  Main.cc  NewGenaMain.cc  ParseProtocol.hh  Parser.cc  Parser.hh  StringDG.hh  StringList.hh  Types.hh  WaylandProtoParser.cc  WaylandScanner.cc  WaylandScanner.hh
cmake/: cleanup_collisions.cmake  target_cxx23.cmake  target_strict_compilation.cmake
include/wl_gena/: GenaMain.hh
